2004-10-30  Nate Nielsen <nielsen@memberwebs.com>
	
	* src/seahorse-preferences.c:
	* src/seahorse-preferences.glade: Fixed preferences dialog to be 
	more HIG compliant (bug# 140989)
	* libseahorse/*:
	* plugins/gedit/seahorse-gedit.c:
	* plugins/nautilus/seahorse-pgp-preferences.c:
	* src/*: Rework the internals of seahorse to provide better key loading, 
    key source and other improvements (see bug# 156600 for file list)
	* seahorse.spec.in: Added file line for libseahorse-internal
	* libseahorse/seahorse-gpg-options.c:
	* libseahorse/seahorse-gpg-options.h: Added seahorse_gpg_homedir function
	
2004-10-27  Nate Nielsen <nielsen@memberwebs.com>

	* agent/seahorse-agent-cache.c: Proper use of GHashTable
	* src/seahorse-key-manager.c: Fix overwrite file dialog 
	(bug# 156535) [Adam Schreiber]
	
2004-10-26  Nate Nielsen <nielsen@memberwebs.com>

	* src/seahorse-pgp-preferences-cache.c: Fix crash resulting from 
	missing glade file
	* agent/Makefile.am:
	* libseahorse/Makefile.am:
	* plugins/gedit/Makefile.am:
	* plugins/nautilus/Makefile.am:
	* src/Makefile.am: For cross platform compatibility libseahorse needs 
	to be a shared library (bug# 156080) [Julio M. Merino Vidal]
	* seahorse.spec.in: Fixed RPM spec file. See %changelog
		
2004-10-25  Adam Schreiber <sadam@clemson.edu>

	* src/seahorse-key-manager.c:
	* src/seahorse-key-manager.glade: First time startup assistant (bug #111937)
	
2004-10-25  Nate Nielsen <nielsen@memberwebs.com>

	* libseahorse/seahorse-context.c: Fix crash when no 'Encrypt to Self' 
	but no default key selected
	* plugins/gedit/seahorse-gedit.c: Use more version portable functions
	for accessing document content (bug# 156368)
	* agent/seahorse-agent-cache.glade:
	* libseahorse/seahorse-passphrase.glade:
	* plugins/nautilus/seahorse-pgp-preferences.glade:
	* src/seahorse-multi-encrypt.glade: HIG fixes
	* libseahorse/seahorse-default-key-control.c: Fixed problems when 
	populating the default key control (bug# 156308)