@@ -1,3 +1,11 @@
+2004-10-31  Nate Nielsen <nielsen@memberwebs.com>
+
+	* agent/seahorse-agent.c:
+	* agent/seahorse-agent-io.c:
+	* libseahorse/seahorse-util.c:
+	* plugins/nautilus/seahorse-pgp-preferences-cache.c: Proper freeing of
+	GErrors using g_clear_error
+	
 2004-10-30  Nate Nielsen <nielsen@memberwebs.com>
 	
 	* src/seahorse-preferences.c:
